update activation status
